# pageleaf

./: README.md  pyproject.toml
src/pageleaf/: __main__.py
src/pageleaf/cli/: main.py
src/pageleaf/commons/: iterable.py
src/pageleaf/commons/io/: files.py
src/pageleaf/data/: section_map.json
src/pageleaf/fetchers/: arxiv.py  arxiv_meta.py  arxiv_pdf.py  base.py  huggingface.py  manager.py
src/pageleaf/ingest/: arxiv_ingesters.py
src/pageleaf/schemas/: paper.py
src/pageleaf/schemas/io/: pdf.py
src/pageleaf/scripts/: read_pdf.py
tests/data/: 2512.02556.json
tests/fetchers/: test_base.py
