[project]
name = "pageleaf"
version = "0.0.1"
description = "PageLeaf is a personal paper-reading assistant for researchers and developers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors=[
    {name='Anders Cui'}
]

classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]
dependencies = [
    "arxiv>=2.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/anderscui/pageleaf"
Repository = "https://github.com/anderscui/pageleaf"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
